include/raiapi2_c.h

typedef struct rai_msg_s        * rai_msg_t;
typedef struct rai_field_s      * rai_field_t;
/* error: pointer to a static { status, reason, module } record, NULL = ok */
typedef const struct rai_error_s * rai_err_t;
/* ---- output stream callback (RaiMsg.Print, Args.addDefaults) ---------- */
/* return bytes consumed; return 0 to signal a broken pipe */
typedef uint32_t (*rai_write_fn)( void *closure,  const uint8_t *buf,
                                  uint32_t len );
RAIAPI2_C_EXP const char * rai_msg_version( void );
RAIAPI2_C_EXP rai_err_t rai_msg_create( int proto,  rai_msg_t *m );
RAIAPI2_C_EXP void      rai_msg_delete( rai_msg_t m );
RAIAPI2_C_EXP rai_err_t rai_msg_reuse( rai_msg_t m,  int proto ); /* -1 keep */
RAIAPI2_C_EXP void      rai_msg_set_protocol( rai_msg_t m,  int proto );
RAIAPI2_C_EXP int       rai_msg_get_protocol( rai_msg_t m );
RAIAPI2_C_EXP const char * rai_msg_get_protocol_string( rai_msg_t m );
RAIAPI2_C_EXP rai_err_t rai_msg_clear_form( rai_msg_t m );
RAIAPI2_C_EXP rai_err_t rai_msg_release( rai_msg_t m );
RAIAPI2_C_EXP rai_err_t rai_msg_copy( rai_msg_t m,  rai_msg_t from );
/* sass header helpers: MSG_TYPE / REC_TYPE / REC_STATUS as strings */
RAIAPI2_C_EXP const char * rai_msg_type_to_string( uint16_t msg_type,
                                                   char *buf,  uint32_t len );
RAIAPI2_C_EXP uint16_t  rai_msg_string_to_type( const char *s );
RAIAPI2_C_EXP const char * rai_rec_status_to_string( uint16_t rec_status,
                                                     char *buf,  uint32_t len );
RAIAPI2_C_EXP uint16_t  rai_string_to_rec_status( const char *s );
RAIAPI2_C_EXP rai_err_t rai_msg_rec_type_to_string( uint16_t rec_type,
                                                    const char **s );
RAIAPI2_C_EXP rai_err_t rai_msg_string_to_rec_type( const char *s,
                                                    uint16_t *rec_type );
RAIAPI2_C_EXP rai_err_t rai_msg_get_hdr_string( rai_msg_t m,  const char *fname,
                                                const char **s );
RAIAPI2_C_EXP rai_err_t rai_msg_set_hdr_string( rai_msg_t m,  const char *fname,
                                                const char *s );
/* field lookup: fills fld (a rai_field_create()'d field), *found = 0/1 */
RAIAPI2_C_EXP rai_err_t rai_msg_get_field( rai_msg_t m,  const char *name,
                                           rai_field_t fld,  int *found );
/* typed get; error NOT_FOUND (9) when missing, BAD_CVT_* when wrong type */
RAIAPI2_C_EXP rai_err_t rai_msg_get_bool( rai_msg_t m,  const char *n, int *v );
RAIAPI2_C_EXP rai_err_t rai_msg_get_i8( rai_msg_t m,  const char *n, int8_t *v);
RAIAPI2_C_EXP rai_err_t rai_msg_get_i16( rai_msg_t m, const char *n,int16_t *v);
RAIAPI2_C_EXP rai_err_t rai_msg_get_i32( rai_msg_t m, const char *n,int32_t *v);
RAIAPI2_C_EXP rai_err_t rai_msg_get_i64( rai_msg_t m, const char *n,int64_t *v);
RAIAPI2_C_EXP rai_err_t rai_msg_get_f32( rai_msg_t m,  const char *n, float *v);
RAIAPI2_C_EXP rai_err_t rai_msg_get_f64( rai_msg_t m,  const char *n,double *v);
RAIAPI2_C_EXP rai_err_t rai_msg_get_string( rai_msg_t m,  const char *n,
                                            const char **s,  uint32_t *len );
RAIAPI2_C_EXP rai_err_t rai_msg_get_opaque( rai_msg_t m,  const char *n,
                                            const void **p,  uint32_t *len );
/* append / update: is_unsigned selects RAI_MSG_UINT for the int types */
RAIAPI2_C_EXP rai_err_t rai_msg_append_bool( rai_msg_t m,  const char *n,
                                             int v );
RAIAPI2_C_EXP rai_err_t rai_msg_append_i8( rai_msg_t m,  const char *n,
                                           int8_t v,  int is_unsigned );
RAIAPI2_C_EXP rai_err_t rai_msg_append_i16( rai_msg_t m,  const char *n,
                                            int16_t v,  int is_unsigned );
RAIAPI2_C_EXP rai_err_t rai_msg_append_i32( rai_msg_t m,  const char *n,
                                            int32_t v,  int is_unsigned );
RAIAPI2_C_EXP rai_err_t rai_msg_append_i64( rai_msg_t m,  const char *n,
                                            int64_t v,  int is_unsigned );
RAIAPI2_C_EXP rai_err_t rai_msg_append_f32( rai_msg_t m,  const char *n,
                                            float v );
RAIAPI2_C_EXP rai_err_t rai_msg_append_f64( rai_msg_t m,  const char *n,
                                            double v );
RAIAPI2_C_EXP rai_err_t rai_msg_append_string( rai_msg_t m,  const char *n,
                                               const char *s );
RAIAPI2_C_EXP rai_err_t rai_msg_append_opaque( rai_msg_t m,  const char *n,
                                               const void *p,  uint32_t len );
RAIAPI2_C_EXP rai_err_t rai_msg_append_partial( rai_msg_t m,  const char *n,
                                                const void *p,  uint32_t len,
                                                uint32_t offset );
RAIAPI2_C_EXP rai_err_t rai_msg_append_msg( rai_msg_t m,  const char *n,
                                            rai_msg_t sub );
RAIAPI2_C_EXP rai_err_t rai_msg_append_field( rai_msg_t m,  rai_field_t f );
RAIAPI2_C_EXP rai_err_t rai_msg_update_bool( rai_msg_t m,  const char *n,
                                             int v );
RAIAPI2_C_EXP rai_err_t rai_msg_update_i8( rai_msg_t m,  const char *n,
                                           int8_t v,  int is_unsigned );
RAIAPI2_C_EXP rai_err_t rai_msg_update_i16( rai_msg_t m,  const char *n,
                                            int16_t v,  int is_unsigned );
RAIAPI2_C_EXP rai_err_t rai_msg_update_i32( rai_msg_t m,  const char *n,
                                            int32_t v,  int is_unsigned );
RAIAPI2_C_EXP rai_err_t rai_msg_update_i64( rai_msg_t m,  const char *n,
                                            int64_t v,  int is_unsigned );
RAIAPI2_C_EXP rai_err_t rai_msg_update_f32( rai_msg_t m,  const char *n,
                                            float v );
RAIAPI2_C_EXP rai_err_t rai_msg_update_f64( rai_msg_t m,  const char *n,
                                            double v );
RAIAPI2_C_EXP rai_err_t rai_msg_update_string( rai_msg_t m,  const char *n,
                                               const char *s );
RAIAPI2_C_EXP rai_err_t rai_msg_update_opaque( rai_msg_t m,  const char *n,
                                               const void *p,  uint32_t len );
RAIAPI2_C_EXP rai_err_t rai_msg_update_field( rai_msg_t m,  rai_field_t f );
/* pack / unpack */
RAIAPI2_C_EXP rai_err_t rai_msg_unpack( rai_msg_t m,  const void *buf,
                                        uint32_t len );
RAIAPI2_C_EXP rai_err_t rai_msg_pack_size( rai_msg_t m,  uint32_t *size );
RAIAPI2_C_EXP rai_err_t rai_msg_pack( rai_msg_t m,  void *buf,  uint32_t len,
                                      uint32_t *size );
/* pointer to the packed message inside the msg, valid until next change */
RAIAPI2_C_EXP rai_err_t rai_msg_packed( rai_msg_t m,  const void **buf,
                                        uint32_t *size );
RAIAPI2_C_EXP rai_err_t rai_msg_activate( rai_msg_t m,  const char *n,
                                          int *ok );
RAIAPI2_C_EXP rai_err_t rai_msg_rename( rai_msg_t m,  const char *old_n,
                                        const char *new_n,  int *ok );
RAIAPI2_C_EXP rai_err_t rai_msg_remove( rai_msg_t m,  const char *n,  int *ok );
/* printing, through the write callback */
RAIAPI2_C_EXP rai_err_t rai_msg_print( rai_msg_t m,  rai_write_fn fn,
                                       void *cl,  int field_newlines,
                                       const char *fname_format,
                                       int print_op,  const char *debug_fmt,
                                       const char *debug_hfmt );
RAIAPI2_C_EXP rai_err_t rai_msg_print_hex( rai_msg_t m,  rai_write_fn fn,
                                           void *cl );
RAIAPI2_C_EXP rai_err_t rai_msg_print_hex_buf( const void *buf,  uint32_t len,
                                               rai_write_fn fn,  void *cl );
RAIAPI2_C_EXP rai_err_t rai_msg_print_xml( rai_msg_t m,  rai_write_fn fn,
                                           void *cl,  int attr_flags,
                                           int print_newlines );
/* ---- RaiField --------------------------------------------------------- */
RAIAPI2_C_EXP rai_field_t rai_field_create( void );
RAIAPI2_C_EXP void      rai_field_delete( rai_field_t f );
RAIAPI2_C_EXP const char * rai_field_name( rai_field_t f );
RAIAPI2_C_EXP int       rai_field_type( rai_field_t f );
RAIAPI2_C_EXP uint32_t  rai_field_size( rai_field_t f );
RAIAPI2_C_EXP int       rai_field_hint_type( rai_field_t f );
RAIAPI2_C_EXP uint32_t  rai_field_hint_size( rai_field_t f );
RAIAPI2_C_EXP int       rai_field_entry_type( rai_field_t f );  /* arrays */
RAIAPI2_C_EXP uint32_t  rai_field_entry_size( rai_field_t f );
RAIAPI2_C_EXP uint32_t  rai_field_num_entries( rai_field_t f );
RAIAPI2_C_EXP uint32_t  rai_field_offset( rai_field_t f );      /* partial */
RAIAPI2_C_EXP int       rai_field_fid( rai_field_t f,  uint16_t *fid );
/* raw data pointer (valid while the message is unchanged) */
RAIAPI2_C_EXP const void * rai_field_data( rai_field_t f );
RAIAPI2_C_EXP const void * rai_field_hint_data( rai_field_t f );
/* converting getters: BAD_CVT_* errors when incompatible */
RAIAPI2_C_EXP rai_err_t rai_field_get_bool( rai_field_t f,  int *v );
RAIAPI2_C_EXP rai_err_t rai_field_get_i8( rai_field_t f,  int8_t *v );
RAIAPI2_C_EXP rai_err_t rai_field_get_i16( rai_field_t f,  int16_t *v );
RAIAPI2_C_EXP rai_err_t rai_field_get_i32( rai_field_t f,  int32_t *v );
RAIAPI2_C_EXP rai_err_t rai_field_get_i64( rai_field_t f,  int64_t *v );
RAIAPI2_C_EXP rai_err_t rai_field_get_f32( rai_field_t f,  float *v );
RAIAPI2_C_EXP rai_err_t rai_field_get_f64( rai_field_t f,  double *v );
RAIAPI2_C_EXP rai_err_t rai_field_get_string( rai_field_t f,  const char **s,
                                              uint32_t *len );
RAIAPI2_C_EXP rai_err_t rai_field_get_msg( rai_field_t f,  rai_msg_t sub );
/* array element access, index < num_entries */
RAIAPI2_C_EXP rai_err_t rai_field_get_entry_i64( rai_field_t f,  uint32_t i,
                                                 int64_t *v );
RAIAPI2_C_EXP rai_err_t rai_field_get_entry_f64( rai_field_t f,  uint32_t i,
                                                 double *v );
RAIAPI2_C_EXP rai_err_t rai_field_get_entry_string( rai_field_t f,  uint32_t i,
                                                    const char **s,
                                                    uint32_t *len );
/* iteration over a message */
RAIAPI2_C_EXP rai_err_t rai_field_first( rai_field_t f,  rai_msg_t m,
                                         int *more );
RAIAPI2_C_EXP rai_err_t rai_field_next( rai_field_t f,  int *more );
RAIAPI2_C_EXP rai_err_t rai_field_find( rai_field_t f,  rai_msg_t m,
                                        const char *name,  int *found );
RAIAPI2_C_EXP const char * rai_field_type_string( int type );