src/raiapi/dotnet/RaiApi2/Native.cs


  /* ---- RaiMsg ---- */
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_version();
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_create( int proto,  out IntPtr m );
  [DllImport( Lib, CallingConvention = CC )] internal static extern void rai_msg_delete( IntPtr m );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_reuse( IntPtr m,  int proto );
  [DllImport( Lib, CallingConvention = CC )] internal static extern void rai_msg_set_protocol( IntPtr m,  int proto );
  [DllImport( Lib, CallingConvention = CC )] internal static extern int rai_msg_get_protocol( IntPtr m );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_get_protocol_string( IntPtr m );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_clear_form( IntPtr m );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_release( IntPtr m );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_copy( IntPtr m,  IntPtr from );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_type_to_string( ushort msg_type,  StringBuilder buf,  uint len );
  [DllImport( Lib, CallingConvention = CC )] internal static extern ushort rai_msg_string_to_type( string s );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_rec_status_to_string( ushort rec_status,  StringBuilder buf,  uint len );
  [DllImport( Lib, CallingConvention = CC )] internal static extern ushort rai_string_to_rec_status( string s );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_rec_type_to_string( ushort rec_type,  out IntPtr s );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_string_to_rec_type( string s,  out ushort rec_type );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_get_hdr_string( IntPtr m,  string fname,  out IntPtr s );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_set_hdr_string( IntPtr m,  string fname,  string s );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_get_field( IntPtr m,  string name,  IntPtr fld,  out int found );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_get_bool( IntPtr m,  string n,  out int v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_get_i8( IntPtr m,  string n,  out sbyte v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_get_i16( IntPtr m,  string n,  out short v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_get_i32( IntPtr m,  string n,  out int v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_get_i64( IntPtr m,  string n,  out long v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_get_f32( IntPtr m,  string n,  out float v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_get_f64( IntPtr m,  string n,  out double v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_get_string( IntPtr m,  string n,  out IntPtr s,  out uint len );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_get_opaque( IntPtr m,  string n,  out IntPtr p,  out uint len );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_append_bool( IntPtr m,  string n,  int v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_append_i8( IntPtr m,  string n,  sbyte v,  int is_unsigned );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_append_i16( IntPtr m,  string n,  short v,  int is_unsigned );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_append_i32( IntPtr m,  string n,  int v,  int is_unsigned );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_append_i64( IntPtr m,  string n,  long v,  int is_unsigned );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_append_f32( IntPtr m,  string n,  float v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_append_f64( IntPtr m,  string n,  double v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_append_string( IntPtr m,  string n,  string s );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_append_opaque( IntPtr m,  string n,  byte[] p,  uint len );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_append_partial( IntPtr m,  string n,  byte[] p,  uint len,  uint offset );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_append_msg( IntPtr m,  string n,  IntPtr sub );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_append_field( IntPtr m,  IntPtr f );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_update_bool( IntPtr m,  string n,  int v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_update_i8( IntPtr m,  string n,  sbyte v,  int is_unsigned );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_update_i16( IntPtr m,  string n,  short v,  int is_unsigned );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_update_i32( IntPtr m,  string n,  int v,  int is_unsigned );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_update_i64( IntPtr m,  string n,  long v,  int is_unsigned );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_update_f32( IntPtr m,  string n,  float v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_update_f64( IntPtr m,  string n,  double v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_update_string( IntPtr m,  string n,  string s );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_update_opaque( IntPtr m,  string n,  byte[] p,  uint len );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_update_field( IntPtr m,  IntPtr f );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_unpack( IntPtr m,  IntPtr buf,  uint len );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_pack_size( IntPtr m,  out uint size );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_pack( IntPtr m,  IntPtr buf,  uint len,  out uint size );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_packed( IntPtr m,  out IntPtr buf,  out uint size );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_activate( IntPtr m,  string n,  out int ok );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_rename( IntPtr m,  string old_n,  string new_n,  out int ok );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_remove( IntPtr m,  string n,  out int ok );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_print( IntPtr m,  WriteFn fn,  IntPtr cl,  int field_newlines,  string fname_format,  int print_op,  string debug_fmt,  string debug_hfmt );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_print_hex( IntPtr m,  WriteFn fn,  IntPtr cl );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_print_hex_buf( IntPtr buf,  uint len,  WriteFn fn,  IntPtr cl );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_msg_print_xml( IntPtr m,  WriteFn fn,  IntPtr cl,  int attr_flags,  int print_newlines );

  /* ---- RaiField ---- */
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_field_create();
  [DllImport( Lib, CallingConvention = CC )] internal static extern void rai_field_delete( IntPtr f );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_field_name( IntPtr f );
  [DllImport( Lib, CallingConvention = CC )] internal static extern int rai_field_type( IntPtr f );
  [DllImport( Lib, CallingConvention = CC )] internal static extern uint rai_field_size( IntPtr f );
  [DllImport( Lib, CallingConvention = CC )] internal static extern int rai_field_hint_type( IntPtr f );
  [DllImport( Lib, CallingConvention = CC )] internal static extern uint rai_field_hint_size( IntPtr f );
  [DllImport( Lib, CallingConvention = CC )] internal static extern int rai_field_entry_type( IntPtr f );
  [DllImport( Lib, CallingConvention = CC )] internal static extern uint rai_field_entry_size( IntPtr f );
  [DllImport( Lib, CallingConvention = CC )] internal static extern uint rai_field_num_entries( IntPtr f );
  [DllImport( Lib, CallingConvention = CC )] internal static extern uint rai_field_offset( IntPtr f );
  [DllImport( Lib, CallingConvention = CC )] internal static extern int rai_field_fid( IntPtr f,  out ushort fid );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_field_data( IntPtr f );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_field_hint_data( IntPtr f );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_field_get_bool( IntPtr f,  out int v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_field_get_i8( IntPtr f,  out sbyte v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_field_get_i16( IntPtr f,  out short v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_field_get_i32( IntPtr f,  out int v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_field_get_i64( IntPtr f,  out long v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_field_get_f32( IntPtr f,  out float v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_field_get_f64( IntPtr f,  out double v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_field_get_string( IntPtr f,  out IntPtr s,  out uint len );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_field_get_msg( IntPtr f,  IntPtr sub );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_field_get_entry_i64( IntPtr f,  uint i,  out long v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_field_get_entry_f64( IntPtr f,  uint i,  out double v );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_field_get_entry_string( IntPtr f,  uint i,  out IntPtr s,  out uint len );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_field_first( IntPtr f,  IntPtr m,  out int more );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_field_next( IntPtr f,  out int more );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_field_find( IntPtr f,  IntPtr m,  string name,  out int found );
  [DllImport( Lib, CallingConvention = CC )] internal static extern IntPtr rai_field_type_string( int type );
}
